<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="english" translatable="false">English</string>
    <string name="german" translatable="false">German</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="vietnamese" translatable="false">Vietnamese</string>
    <string name="turkish" translatable="false">Turkish</string>
    <string name="russian" translatable="false">Russian</string>
    <string name="ukrainian" translatable="false">Ukrainian</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="chinese" translatable="false">Chinese</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="japanese" translatable="false">Japanese</string>
    <string name="korean" translatable="false">Korean</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="side_sheet_behavior" translatable="false">com.google.android.material.sidesheet.SideSheetBehavior</string>
    <string name="searchbar_scrolling_view_behavior" translatable="false">com.google.android.material.search.SearchBar$ScrollingViewBehavior</string>
    <string name="text_lang_en" translatable="false"><![CDATA[English]]></string>
    <string name="text_lang_ja" translatable="false"><![CDATA[日本語]]></string>
    <string name="text_lang_ko" translatable="false"><![CDATA[한국어]]></string>
    <string name="text_lang_hi" translatable="false"><![CDATA[हिन्दी]]></string>
    <string name="text_lang_vi" translatable="false"><![CDATA[Tiếng Việt]]></string>
    <string name="text_lang_tr" translatable="false"><![CDATA[Türkçe]]></string>
    <string name="text_lang_zh" translatable="false"><![CDATA[简体中文]]></string>
    <string name="text_lang_es" translatable="false"><![CDATA[Español]]></string>
    <string name="text_lang_pt" translatable="false"><![CDATA[Português]]></string>
    <string name="text_lang_ru" translatable="false"><![CDATA[Русский]]></string>
    <string name="text_lang_de" translatable="false"><![CDATA[Deutsch]]></string>
    <string name="text_lang_uk" translatable="false"><![CDATA[Українська]]></string>
    <string name="text_lang_ar" translatable="false"><![CDATA[العربية]]></string>
    <string name="text_15s" translatable="false">15s</string>
    <string name="ten" translatable="false">10</string>
    <string name="app_name"><![CDATA[Find Phone By Clap]]></string>
    <string name="text_welcome"><![CDATA[Welcome]]></string>
    <string name="text_create_by"><![CDATA[Created by Higher Studio]]></string>
    <string name="first_check">I understand that sharing of inappropriate content will not be tolerated.</string>
    <string name="army_trumpet">Army trumpet</string>
    <string name="birds_chirping">Birds chirping</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="car_honk">Car honk</string>
    <string name="cat_meowing">Cat meowing</string>
    <string name="cavelry">Cavelry</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="channel_description">Clap To Find Phone</string>
    <string name="channel_name">Find Phone By Clap &amp; Voice</string>
    <string name="clap_mode">Clap Mode</string>
    <string name="clap_modes">Clap</string>
    <string name="congratulations_nyou_have_found_your_phone">Congratulations!\nYou have found your phone</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="default1">Default</string>
    <string name="disable_voice_detection_service_first">Please Deactive Service First</string>
    <string name="disco_mode">Disco mode</string>
    <string name="dog_barking">Dog barking</string>
    <string name="don_t_have_passcode_yet">Please record your passcord</string>
    <string name="find_phone_running">Find Phone By Clap &amp; Voice is running</string>
    <string name="don_t_touch_my_phone">Don\'t Touch My Phone Service</string>
    <string name="don_t_touch_my_phone_service_is_running">Don\'t Touch my phone service is running</string>
    <string name="clap_service_is_running">Clap To Find Phone Service</string>
    <string name="voice_service_is_running">Speak To Find Phone</string>
    <string name="pocket_service_is_run">Don\'t take my phone</string>
    <string name="door_bell">Door bell</string>
    <string name="duration">Duration</string>
    <string name="enter_your_passcode_here">Enter your passcode here</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="feedback">Feedback</string>
    <string name="flashlight">Flashlight</string>
    <string name="how_to_use">How To Use</string>
    <string name="languages">Languages</string>
    <string name="listen">Listen</string>
    <string name="more">More</string>
    <string name="notifications_permission_confirm">Allow</string>
    <string name="notifications_permission_decline">Don\'t allow</string>
    <string name="notifications_permission_title">Allow app to send you notifications?</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="party_horn">Party horn</string>
    <string name="please_record_something">Please Record Something</string>
    <string name="pocket">Pocket</string>
    <string name="police_whistle">Police</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="record_passcode">Record Passcode</string>
    <string name="rifle">Rifle</string>
    <string name="save">Save</string>
    <string name="search_menu_title">Search</string>
    <string name="searchview_clear_text_content_description">Clear text</string>
    <string name="searchview_navigation_content_description">Back</string>
    <string name="side_sheet_accessibility_pane_title">Side Sheet</string>
    <string name="sos_mode">SOS mode</string>
    <string name="sound">Sound</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab_text_1">Clap</string>
    <string name="tab_text_2">Voice</string>
    <string name="tab_text_4">Pocket</string>
    <string name="tap_to_complete">Tap to complete</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="text_to_voice">Text to voice</string>
    <string name="thunder">Thunder</string>
    <string name="vibration">Vibration</string>
    <string name="voice">Voice</string>
    <string name="watermark_label_prefix">AdMob - </string>
    <string name="whistle">Whistle</string>
    <string name="your_device_doesn_t_support_flash">Your device doesn\'t support flash</string>
    <string name="got_it">Got it</string>
    <string name="this_feature_is_not_supported_by_your_device">This Feature is not supported by your device</string>
    <string name="need_allow_notification_to_show_notification">Need Allow Notification to show Notification</string>
    <string name="need_to_allow_audio_recording_to_use_this_feature">Need to allow audio recording to use this feature</string>
    <string name="text_next"><![CDATA[Next]]></string>
    <string name="advertiser">Advertiser</string>
    <string name="headline">Headline</string>
    <string name="ad">Ad</string>
    <string name="register_account">Register Account</string>
    <string name="facebook">Facebook</string>
    <string name="text_intro1_title"><![CDATA[Don\'t Touch My Phone]]></string>
    <string name="text_intro1_msg"><![CDATA[Get an alert as soon as someone touches your phone. Stay safe anytime, anywhere.]]></string>
    <string name="text_intro2_title"><![CDATA[Pocket Alert!]]></string>
    <string name="text_intro2_msg"><![CDATA[Detect and warn instantly when someone tries to take your phone from your pocket.]]></string>
    <string name="text_intro3_title"><![CDATA[Flashlight turns on in the dark]]></string>
    <string name="text_intro3_msg"><![CDATA[The flashlight feature helps you quickly and easily locate your phone in the dark.]]></string>
    <string name="choose_language"><![CDATA[Select Language]]></string>
    <string name="please_select_language"><![CDATA[Please select a display language.]]></string>
    <string name="mgs_ok"><![CDATA[OK]]></string>
    <string name="lost_network_connection"><![CDATA[Lost network connection. Please reconnect to the network.]]></string>
    <string name="network_connect"><![CDATA[Network connected]]></string>
    <string name="connect_internet"><![CDATA[Internet Connection]]></string>
    <string name="mgs_cancel"><![CDATA[Cancel]]></string>
    <string name="title_update_version"><![CDATA[Update New Version]]></string>
    <string name="message_update_version"><![CDATA[Find Phone by Clap, Voice has a new version. Please update to the new version for the best experience!]]></string>
    <string name="btn_later"><![CDATA[Later]]></string>
    <string name="warning_rating"><![CDATA[Please select your rating.]]></string>
    <string name="save_script"><![CDATA[Save]]></string>
    <string name="content_feedback"><![CDATA[We are sorry to hear you are not satisfied with Find Phone by Clap, Voice. Please send your feedback and suggestions to our email, so we can improve our service in the future.]]></string>
    <string name="choose_email"><![CDATA[Choose an Email:]]></string>
    <string name="pocket_detection_service_started">Pocket Detection Service Started</string>
    <string name="select_language">Select Language</string>
    <string name="label_grant_permission">The Application needs Permission to provide phone finder by clapping.</string>
    <string name="record_permission">Record Permission</string>
    <string name="notification_permission_label">Clap To Find Phone requires notification permission to display alerts while listening for your phone-finding signal. Without this permission, the main feature will not function.</string>
    <string name="record_permission_label">Clap To Find Phone requires record permission to listen for your phone-finding signal. Without this permission, the main feature will not function.</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="title_rating_notification">Do You Like Our App ?</string>
    <string name="label_rating_notification">Give us a 5-star rating to help us serve you better!</string>
    <string name="not_now">Not now</string>
    <string name="label_notification_permission">The Application needs Notification Permission to provide phone finder by clapping.</string>
    <string name="permission_success_title">Find Phone By Clap and Voice is ready</string>
    <string name="permission_success_content">Clap twice consecutively or use your set passcode to locate your phone!</string>
    <string name="voice_mode">Voice Mode</string>
    <string name="voice_mode_intro">Record your sound or use text-to-voice to set up a phone-finding sound.</string>
</resources>