<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_56dp"
            android:background="@drawable/bg_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/common_20dp"
                android:layout_marginVertical="@dimen/common_12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    app:tint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_left"
                    android:paddingVertical="@dimen/common_12dp"/>

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/common_2dp"
                    android:layout_marginStart="@dimen/common_12dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/languages"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16sp"
                    android:fontFamily="@font/poppinsmedium"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/common_16dp">

            <LinearLayout
                android:id="@+id/layoutAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemHindi"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_hi" />

                <TextView
                    android:id="@+id/itemGerman"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_de" />

                <TextView
                    android:id="@+id/itemSpanish"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_es" />

                <TextView
                    android:id="@+id/itemPortuguase"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_pt" />

                <TextView
                    android:id="@+id/itemEnglish"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_en" />

                <TextView
                    android:id="@+id/itemVietNam"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_vi" />

                <TextView
                    android:id="@+id/itemTurkey"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_tr" />

                <TextView
                    android:id="@+id/itemRussian"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_ru" />

                <TextView
                    android:id="@+id/itemUkraian"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_uk" />

                <TextView
                    android:id="@+id/itemJapan"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_ja" />

                <TextView
                    android:id="@+id/itemKorean"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_ko" />

                <TextView
                    android:id="@+id/itemChina"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_zh" />

                <TextView
                    android:id="@+id/itemAbric"
                    style="@style/ButtonSelectLangStyle"
                    android:layout_marginTop="@dimen/common_10dp"
                    android:text="@string/text_lang_ar" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>