<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/common_24dp"
        android:paddingHorizontal="@dimen/common_16dp"
        android:background="@drawable/bg_rectangle_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/common_24dp">

        <ImageView
            android:id="@+id/ivRating"
            android:layout_width="@dimen/common_100dp"
            android:layout_height="@dimen/common_100dp"
            android:src="@drawable/ic_rating"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_title_dialog_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rating_notification"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_16dp"
            app:layout_constraintTop_toBottomOf="@id/ivRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lytContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rating_notification"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/color_6F7384"
            android:gravity="center"
            android:layout_marginTop="@dimen/common_8dp"
            app:layout_constraintTop_toBottomOf="@id/txt_title_dialog_permission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RatingBar
            android:id="@+id/rating"
            style="@style/foodRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytContent"
            android:layout_marginTop="@dimen/common_16dp"/>

        <TextView
            android:id="@+id/btnCancel"
            style="@style/ButtonCancelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_24dp"
            android:text="@string/btn_later"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvRateUs"
            android:layout_marginRight="@dimen/common_12dp"/>

        <TextView
            android:id="@+id/tvRateUs"
            style="@style/ButtonConfirmStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_24dp"
            android:text="@string/rate_us"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
