<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/common_20dp"
        android:paddingVertical="@dimen/common_24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/common_200dp"
            android:layout_height="@dimen/common_200dp"
            android:src="@drawable/ic_clap_success"/>

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:text="@string/permission_success_title"
            android:textColor="@color/color_424141"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintTop_toBottomOf="@id/imageViewmain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/permission_success_content"
            android:textColor="@color/color_6F7384"
            android:textSize="@dimen/text_size_13sp"
            app:layout_constraintTop_toBottomOf="@id/dialog_title" />

        <TextView
            android:id="@+id/dialog_button"
            style="@style/ButtonConfirmStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_24dp"
            android:layout_marginHorizontal="@dimen/common_20dp"
            android:paddingHorizontal="@dimen/common_40dp"
            android:gravity="center"
            android:text="@string/got_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>