<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_rectangle_16"
        android:paddingHorizontal="@dimen/common_20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageViewmain"
            android:layout_width="@dimen/common_120dp"
            android:layout_height="@dimen/common_120dp"
            android:layout_marginTop="@dimen/common_40dp"
            android:background="@drawable/ic_voice_intro"
            android:paddingStart="@dimen/common_5dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/BottomSheetTextTitle"
            android:text="@string/voice_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewmain"
            app:layout_constraintBottom_toTopOf="@+id/lytContent"/>

        <TextView
            android:id="@+id/lytContent"
            style="@style/BottomSheetTextMessage"
            android:text="@string/voice_mode_intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title"/>

        <TextView
            android:id="@+id/gotIt"
            style="@style/ButtonConfirmStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_24dp"
            android:layout_marginBottom="@dimen/common_24dp"
            android:layout_marginHorizontal="@dimen/common_20dp"
            android:paddingHorizontal="@dimen/common_40dp"
            android:gravity="center"
            android:text="@string/got_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
